--- a/portfoliobtssio/html/contact.html
+++ b/portfoliobtssio/html/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="common.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Contact</title>
 </head>
@@ -41,7 +42,7 @@
             <input type="text" name="name" placeholder="Votre nom" required><br>
             <input type="email" name="email" placeholder="Votre Email" required><br>
             <textarea name="message" placeholder="Votre Message" required></textarea><br>
-            <input type="submit" value="Envoyer le Message">
+            <button class="button" type="submit" value="Envoyer le Message"></button>
         </form>
     </div>
 </body>
