--- a/portfoliobtssio/html/parcours.html
+++ b/portfoliobtssio/html/parcours.html
@@ -6,7 +6,8 @@
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
     <meta name="author" content="CLAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="portfolio.css">
+    <link rel="stylesheet" type="text/css" href="parcours.css">
+    <link rel="stylesheet" href="common.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2024)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
